Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntegerBoolObjField.quorum
class Main
    integer v = Test()
    action Main
    end

    action Test() returns integer
        Boolean var
        var:SetValue(true)
        return var
    end
end